<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddScheduleActivity"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/orange"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-150dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buatacara"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:textAllCaps="true"
            android:textSize="30sp">
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/judul"
            android:layout_marginTop="20dp"
            android:id="@+id/et_judul"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/catatan"
            android:layout_marginTop="20dp"
            android:id="@+id/et_ctt"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/acara"
            android:layout_marginTop="20dp"
            android:id="@+id/et_acara"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/ingatkan"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tanggal"
            android:id="@+id/tv_tanggal"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buatacara"
            android:id="@+id/btn_buat"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


</LinearLayout>