<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpeningActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

      <ImageView
          android:id="@+id/img_image1"
          android:layout_width="300dp"
          android:layout_height="300dp"
          android:layout_marginTop="30dp"
          android:layout_weight="2"
          android:layout_gravity="center_horizontal"
          android:src="@drawable/image4" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_marginStart="75dp"
          android:paddingVertical="5dp"
          android:orientation="vertical">

         <TextView
             android:id="@+id/tv_textManage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/manage"
             android:textSize="30sp" />

         <TextView
             android:id="@+id/tv_textYour"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/your"
             android:textSize="30sp" />

         <TextView
             android:id="@+id/tv_textDaily"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
             android:textSize="30sp" />
      </LinearLayout>

      <Button
          android:id="@+id/btn_get"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:layout_marginTop="20dp"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/tombol_started"
          android:text="@string/getstarted"/>

   </LinearLayout>

</RelativeLayout>