<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
        android:id="@+id/rl_image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="320dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/orange"
                android:src="@drawable/ic_tambah"
                app:borderWidth="0dp" />

            <ImageView
                android:id="@+id/img_image"
                android:layout_width="wrap_content"
                android:layout_height="530dp"
                android:src="@drawable/imagee" />

            <TextView
                android:id="@+id/tv_textStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textSize="20sp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="45dp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_textYour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task"
                android:textSize="20sp"
                android:layout_marginStart="45dp"
                android:layout_below="@id/tv_textStart"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_below="@id/tv_textYour"
                android:layout_centerInParent="true"
                android:src="@drawable/image3" />

            <TextView
                android:id="@+id/tv_textMytask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mytask"
                android:layout_below="@id/img_image"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/orange"
                android:layout_marginStart="45dp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/img_icSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_textMytask"
                android:layout_marginStart="65dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_schedule" />

            <TextView
                android:id="@+id/tv_textSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule"
                android:textSize="15sp"
                android:layout_marginStart="50dp"
                android:textColor="@color/black"
                android:layout_below="@id/img_icSchedule"/>

            <ImageView
                android:id="@+id/img_icActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_textMytask"
                android:layout_marginStart="65dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/img_icSchedule"
                android:src="@drawable/ic_activity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity"
                android:textSize="15sp"
                android:layout_marginStart="50dp"
                android:textColor="@color/black"
                android:layout_toEndOf="@id/tv_textSchedule"
                android:layout_below="@id/img_icSchedule"/>

            <TextView
                android:id="@+id/tv_textOngoing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ongoing"
                android:layout_below="@id/img_icSchedule"
                android:textSize="20sp"
                android:layout_marginTop="35dp"
                android:textColor="@color/orange"
                android:layout_marginStart="45dp"
                android:textStyle="bold"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_content"
                android:layout_below="@id/tv_textOngoing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="8dp"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>



